syntax = "proto3";

package depotpb;

import "depotpb/messages.proto";

service DepotService {
    rpc CreateShoppingList(CreateShoppingListRequest) returns (CreateShoppingListResponse);
    rpc CancelShoppingList(CancelShoppingListRequest) returns (CancelShoppingListResponse);
    rpc CompleteShoppingList(CompleteShoppingListRequest) returns (CompleteShoppingListResponse);
    rpc AssignBotToShoppingList(AssignBotToShoppingListRequest) returns (AssignBotToShoppingListResponse);
    rpc GetShoppingList(GetShoppingListRequest) returns (GetShoppingListResponse);
}

message CreateShoppingListRequest {
    string order_id = 1;
    repeated OrderItem items = 2;
}

message CreateShoppingListResponse {
    string id = 1;
}

message CancelShoppingListRequest {
    string id = 1;
}

message CancelShoppingListResponse {}

message CompleteShoppingListRequest {
    string id = 1;
}

message CompleteShoppingListResponse {}

message AssignBotToShoppingListRequest {
    string id = 1;
    string bot_id = 2;
}

message AssignBotToShoppingListResponse {}

message GetShoppingListRequest {
    string id = 1;
}

message GetShoppingListResponse {
    ShoppingList shopping_list = 1;
}